--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-15  Neil Williams  <linux@codehelp.co.uk>
+
+	* HACKING,
+	configure.in,
+	Makefile.am,
+	autogen.sh : Remove intltool and glib-gettextize
+	in favour of plain gettext.
+
 2007-11-15  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
