--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -3,8 +3,9 @@ qof (0.7.4-1) unstable; urgency=low
   * New upstream release.
   * Implement versioned symbols and a symbols file for each library
   * Avoid preparing docs in Emdebian
+  * does not contain separated debugging symbols (Closes: #462007)
 
- -- Neil Williams <codehelp@debian.org>  Mon, 14 Jan 2008 22:24:20 +0000
+ -- Neil Williams <codehelp@debian.org>  Thu, 24 Jan 2008 23:12:38 +0000
 
 qof (0.7.3-1) unstable; urgency=low
 
