--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -4,8 +4,9 @@ qof (0.7.4-1) unstable; urgency=low
   * Implement versioned symbols and a symbols file for each library
   * Avoid preparing docs in Emdebian
   * does not contain separated debugging symbols (Closes: #462007)
+  * Fix the CVS location to allow debcheckout to work
 
- -- Neil Williams <codehelp@debian.org>  Thu, 24 Jan 2008 23:12:38 +0000
+ -- Neil Williams <codehelp@debian.org>  Fri, 25 Jan 2008 21:35:43 +0000
 
 qof (0.7.3-1) unstable; urgency=low
 
