--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-31  Neil Williams  <linux@codehelp.co.uk>
+
+ * configure.in : 0.7.5 release to expand symbol
+   versioning support to any -gnu platform.
+
 2008-01-29  Neil Williams  <linux@codehelp.co.uk>
 
  * configure.in : 0.7.4 release.
