--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,3 +1,11 @@
+qof (0.7.5-1) unstable; urgency=low
+
+  * New upstream release.
+  * erronous check for *linux* to detect symbols versioning support
+    (Closes: #463392)
+
+ -- Neil Williams <codehelp@debian.org>  Thu, 31 Jan 2008 19:12:59 +0000
+
 qof (0.7.4-1) unstable; urgency=low
 
   * New upstream release.
