--- a/qof/ChangeLog
+++ b/qof/ChangeLog
@@ -1,3 +1,13 @@
+2008-03-04  Neil Williams  <linux@codehelp.co.uk>
+
+ * autogen.sh : Migrate to autoreconf -ifs instead
+ of calling individual tools
+ * Makefile.am : Drop m4/ChangeLog
+ * qof/Makefile.am : Take advantage of the lack of
+ an updated libgda3-3 in Debian to fix a problem in
+ make distcheck when gda is not in use - look for
+ libqofsql in top_builddir, not top_srcdir. Oops.
+
 2008-01-31  Neil Williams  <linux@codehelp.co.uk>
 
  * configure.in : 0.7.5 release to expand symbol
