--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,3 +1,12 @@
+qof (0.8.0-1) unstable; urgency=low
+
+  * New upstream version of libqof2.
+  * Change SONAME (NEW package)
+  * Change backend modules into private plugins
+    (NEW package names)
+
+ -- Neil Williams <codehelp@debian.org>  Sun, 06 Jan 2008 15:13:28 +0000
+
 qof (0.7.5-1) unstable; urgency=low
 
   * New upstream release.
