--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -4,8 +4,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Change SONAME (NEW package)
   * Change backend modules into private plugins
     (NEW package names)
+  * migrate doc-base sections
 
- -- Neil Williams <codehelp@debian.org>  Sun, 06 Jan 2008 15:13:28 +0000
+ -- Neil Williams <codehelp@debian.org>  Sun, 16 Mar 2008 11:22:28 +0000
 
 qof (0.7.5-1) unstable; urgency=low
 
