--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -9,8 +9,10 @@ qof (0.8.0-1) unstable; urgency=low
   * Make -dev package depend on libgda3-dev and drop outdated Replaces:
     flags
   * Add the GDA backend package by default
+  * drop Debian QOF packaging team, migrate homepage and VCS fields to
+    new Alioth home for upstream and Debian
 
- -- Neil Williams <codehelp@debian.org>  Tue, 18 Mar 2008 11:09:39 +0000
+ -- Neil Williams <codehelp@debian.org>  Thu, 17 Apr 2008 14:38:53 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
