--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -11,8 +11,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Add the GDA backend package by default
   * drop Debian QOF packaging team, migrate homepage and VCS fields to
     new Alioth home for upstream and Debian
+  * copyright: Add LGPL details for DWI backend
 
- -- Neil Williams <codehelp@debian.org>  Thu, 17 Apr 2008 14:38:53 +0100
+ -- Neil Williams <codehelp@debian.org>  Thu, 17 Apr 2008 14:40:38 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
