web commit by http://codehelp.myopenid.com/

--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -1,6 +1,8 @@
 <img src="qof-logo.jpg" id="qoflogo" alt="image based on the hebrew
 symbol of the same name">
 
+test.
+
 <div id="actions">
 <ul>
 <li><a href="#intro">Introduction</a></li>
