--- a/wiki/trunk/sandbox.mdwn
+++ b/wiki/trunk/sandbox.mdwn
@@ -4,7 +4,7 @@ This is the SandBox, a page anyone can edit to learn how to use the wiki.
 
 Here's a paragraph.
 
-foo
+foo bar
 
 Here's another one with *emphasised* text.
 
