--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -12,8 +12,9 @@ qof (0.8.0-1) unstable; urgency=low
   * drop Debian QOF packaging team, migrate homepage and VCS fields to
     new Alioth home for upstream and Debian
   * copyright: Add LGPL details for DWI backend
+  * Add debian/xcontrol support
 
- -- Neil Williams <codehelp@debian.org>  Thu, 17 Apr 2008 14:40:38 +0100
+ -- Neil Williams <codehelp@debian.org>  Thu, 17 Apr 2008 18:56:07 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
