--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -99,6 +99,9 @@ The API documentation is embedded in the header files and
 Support should be obtained by subscribing to the mailing list:
 [http://lists.alioth.debian.org/mailman/listinfo/qof-devel](http://lists.alioth.debian.org/mailman/listinfo/qof-devel).
 
+Archives are available at:
+[http://lists.alioth.debian.org/pipermail/qof-devel/](http://lists.alioth.debian.org/pipermail/qof-devel/)
+
 ----
 
 ## <span id="origins">Origins</span>
