--- a/qof/po/id.po
+++ b/qof/po/id.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: id\n"
-"Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2008-04-17 23:15+0100\n"
+"Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
+"POT-Creation-Date: 2008-04-19 18:01+0100\n"
 "PO-Revision-Date: 2007-08-30 21:33+0700\n"
 "Last-Translator: Tedi Heriyanto <tedi.heriyanto@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
