--- a/qof/po/pt_BR.po
+++ b/qof/po/pt_BR.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.7.2\n"
-"Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2008-04-17 23:15+0100\n"
+"Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
+"POT-Creation-Date: 2008-04-19 18:01+0100\n"
 "PO-Revision-Date: 2006-09-29 23:15-0300\n"
 "Last-Translator: J. Victor D. Martins <jvdm@sdf.lonestar.org>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar.conectiva.com.br>\n"
