--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -14,8 +14,9 @@ qof (0.8.0-1) unstable; urgency=low
   * copyright: Add LGPL details for DWI backend
   * Add debian/xcontrol support
   * Remove website from -doc package now that it is a wiki.
+  * [gpe-expenses] gpe-expenses crash (Closes: #479374)
 
- -- Neil Williams <codehelp@debian.org>  Thu, 17 Apr 2008 18:56:51 +0100
+ -- Neil Williams <codehelp@debian.org>  Sun, 04 May 2008 17:02:09 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
