--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -15,8 +15,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Add debian/xcontrol support
   * Remove website from -doc package now that it is a wiki.
   * [gpe-expenses] gpe-expenses crash (Closes: #479374)
+  * Upgrade to Standards Version 3.8.0 (no changes)
 
- -- Neil Williams <codehelp@debian.org>  Sun, 04 May 2008 17:02:09 +0100
+ -- Neil Williams <codehelp@debian.org>  Thu, 05 Jun 2008 08:22:13 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
