--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -15,9 +15,12 @@ qof (0.8.0-1) unstable; urgency=low
   * Add debian/xcontrol support
   * Remove website from -doc package now that it is a wiki.
   * [gpe-expenses] gpe-expenses crash (Closes: #479374)
-  * Upgrade to Standards Version 3.8.0 (no changes)
+  * Split translations into libqof-data to remove the need for a
+    Replaces: line in libqof2. (Policy 8.2). Brings QOF up to date with
+    Standards Version 3.8.0. (libqof-data will disappear once TDebs are
+    available in Debian.)
 
- -- Neil Williams <codehelp@debian.org>  Thu, 05 Jun 2008 08:22:13 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 18 Jun 2008 14:34:48 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
