--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -21,8 +21,9 @@ qof (0.8.0-1) unstable; urgency=low
     Standards Version 3.8.0. (qof-data will disappear once TDebs are
     available in Debian.)
   * qof-data still needs Replaces: libqof1 anyway.
+  * Add symlink to make devhelp support accessible.
 
- -- Neil Williams <codehelp@debian.org>  Wed, 18 Jun 2008 15:21:22 +0100
+ -- Neil Williams <codehelp@debian.org>  Fri, 02 Jan 2009 20:26:05 +0000
 
 qof (0.7.5-1) unstable; urgency=low
 
