--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -23,8 +23,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Add symlink to make devhelp support accessible.
   * implement nocheck DEB_BUILD_OPTION
   * omit backend plugins from dh_makeshlibs - not public anymore.
+  * Provide: virtual packages for each backend for easier transitions.
 
- -- Neil Williams <codehelp@debian.org>  Wed, 18 Mar 2009 11:54:22 +0000
+ -- Neil Williams <codehelp@debian.org>  Sun, 03 May 2009 17:32:48 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
