--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -25,8 +25,9 @@ qof (0.8.0-1) unstable; urgency=low
   * omit backend plugins from dh_makeshlibs - not public anymore.
   * Provide: virtual packages for each backend for easier transitions.
   * clean up the copied symbols file (easier cross-building)
+  * Use debug section for dbg package.
 
- -- Neil Williams <codehelp@debian.org>  Wed, 06 May 2009 14:45:32 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 06 May 2009 15:03:54 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
