--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -6,9 +6,10 @@ qof (0.8.0-1) unstable; urgency=low
     (NEW package names)
   * migrate doc-base sections
   * Drop .la files from plugin packages
-  * Make -dev package depend on libgda3-dev and drop outdated
-    Replaces: flags
-  * Add the GDA backend package by default
+  * Make -dev package depend on libgda3-dev and pkg-config. Drop
+    outdated Replaces: flags
+  * Omit the new GDA backend package which is not ready for
+    widespread usage yet.
   * drop Debian QOF packaging team, migrate homepage and VCS
     fields to new Alioth home for upstream and Debian
   * Add debian/xcontrol support
@@ -24,7 +25,7 @@ qof (0.8.0-1) unstable; urgency=low
   * implement nocheck DEB_BUILD_OPTION
   * omit backend plugins from dh_makeshlibs - not public anymore.
   * Provide: virtual packages for each backend for easier transitions.
-  * clean up the copied symbols file (easier cross-building)
+  * remove the copied symbols file in the clean target (easier cross-building)
   * Use debug section for dbg package.
   * Downgrade Recommends: libqof-doc to a Suggests for those who still
     use Recommends-Important. Remove some unnecessary build-dependencies.
