--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -29,8 +29,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Use debug section for dbg package.
   * Downgrade Recommends: libqof-doc to a Suggests for those who still
     use Recommends-Important. Remove some unnecessary build-dependencies.
+  * [L10n] Add French program translation   (Closes: #528756)
 
- -- Neil Williams <codehelp@debian.org>  Thu, 07 May 2009 21:08:01 +0100
+ -- Neil Williams <codehelp@debian.org>  Fri, 15 May 2009 16:16:45 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
