--- a/qof/po/fr.po
+++ b/qof/po/fr.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: qof 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
 "POT-Creation-Date: 2009-05-08 10:10+0100\n"
-"PO-Revision-Date: 2009-04-09 10:00+0100\n"
+"PO-Revision-Date: 2009-05-15 21:16+0200\n"
 "Last-Translator: Julien Patriaca <patriarcaj@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
+"MIME-Version: 1.0>\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Country: FRANCE\n"
@@ -20,7 +20,7 @@ msgstr ""
 #: backend/file/qsf-xml.c:254 backend/file/qsf-xml.c:310
 #, c-format
 msgid "The QSF XML file '%s' could not be found."
-msgstr "Le fichier QSF XMl '%s' n'a pu être trouvé."
+msgstr "Le fichier QSF XMl « %s » n'a pu être trouvé."
 
 #: backend/file/qsf-xml-map.c:259 backend/file/qsf-xml-map.c:281
 #: backend/file/qsf-xml-map.c:340 backend/file/qsf-xml.c:265
@@ -29,7 +29,7 @@ msgstr "Le fichier QSF XMl '%s' n'a pu être trouvé."
 #, c-format
 msgid "There was an error parsing the file '%s'."
 msgstr ""
-"Une erreur s'est produite lors de l'analyse syntaxique du fichier '%s'."
+"Une erreur s'est produite lors de l'analyse syntaxique du fichier « %s »."
 
 #: backend/file/qsf-xml-map.c:265 backend/file/qsf-xml.c:271
 #: backend/file/qsf-xml.c:330
@@ -39,14 +39,14 @@ msgid ""
 "against the QSF object schema. The XML structure of the file is either not "
 "well-formed or the file contains illegal data."
 msgstr ""
-"L'objet QSF est invalide ! La validation du fichier a échoué au regard du "
-"schéma des objets QSF '%s'. La structure XMl du fichier est soit mal formée "
-"soit contient des données incompatibles."
+"L'objet QSF est invalide ! La validation du fichier « %s » a échoué au regard du "
+"schéma des objets QSF. La structure XMl du fichier est soit mal formée soit "
+"contient des données incompatibles."
 
 #: backend/file/qsf-xml-map.c:274
 #, c-format
 msgid "The QSF map file '%s' could not be found."
-msgstr "Le schéma QSF '%s' n'a pu être trouvé."
+msgstr "Le schéma QSF « %s » n'a pu être trouvé."
 
 #: backend/file/qsf-xml-map.c:347
 msgid ""
@@ -54,7 +54,7 @@ msgid ""
 "map schema. The XML structure of the file is either not well-formed or the "
 "file contains illegal data."
 msgstr ""
-"Fichier schéma QSF invalide ! La validation du fichier a échoué au regard du "
+"Fichier schéma QSF invalide ! La validation du fichier a échoué au regard du "
 "schéma des objets QSF. La structure XMl du fichier est soit mal formée soit "
 "contient des données incompatibles."
 
@@ -65,7 +65,7 @@ msgid ""
 "because not all the required parameters for the defined objects have "
 "calculations described in the map."
 msgstr ""
-"Le schéma QSF sélectionné '%s' comporte des données inutilisables ou "
+"Le schéma QSF sélectionné « %s » comporte des données inutilisables ou "
 "manquantes. Cela arrive généralement quand tous les paramètres requis pour "
 "les objets définis n'ont pas de données spécifiées dans le schéma."
 
@@ -75,7 +75,7 @@ msgid ""
 "The QSF Map file '%s' was written for a different version of QOF. It may "
 "need to be modified to work with your current QOF installation."
 msgstr ""
-"Le fichier schéma QSF '%s' a été écrit pour une version différente de QOF. "
+"Le fichier schéma QSF « %s » a été écrit pour une version différente de QOF. "
 "Il devra certainement être modifié pour fonctionner avec votre version de "
 "QOF actuelle."
 
@@ -136,7 +136,7 @@ msgstr ""
 msgid ""
 "The selected QSF Object file '%s' requires a map but it was not provided."
 msgstr ""
-"L'objet QSF sélectionné '%s' nécessite un schéma qui n'a pas été spécifié."
+"L'objet QSF sélectionné « %s » nécessite un schéma qui n'a pas été spécifié."
 
 #: backend/file/qsf-backend.c:249
 #, c-format
@@ -146,7 +146,7 @@ msgid ""
 "a number."
 msgstr ""
 "Lors de la conversion des chaînes XML en chiffres, un dépassement a été "
-"détecté. L'objet QSF '%s' comporte des données invalides dans un champ censé "
+"détecté. L'objet QSF « %s » comporte des données invalides dans un champ censé "
 "contenir un chiffre."
 
 #: backend/file/qsf-backend.c:333
@@ -155,27 +155,27 @@ msgid ""
 "could not write to '%s'. That database may be on a read-only file system, or "
 "you may not have write permission for the directory.\n"
 msgstr ""
-"N'a pas pu écrire dans '%s'. Soit la base de données est en lecture seule, "
+"N'a pas pu écrire dans « %s ». Soit la base de données est en lecture seule, "
 "soit vous n'avez pas les droits nécessaires pour écrire dans le répertoire.\n"
 
 #: backend/file/qsf-backend.c:491
 #, c-format
 msgid "There was an error parsing the file '%s'.\n"
 msgstr ""
-"Une erreur s'est produite lors de l'analyse syntaxique du fichier '%s'.\n"
+"Une erreur s'est produite lors de l'analyse syntaxique du fichier « %s ».\n"
 
 #: backend/file/qsf-backend.c:577
 #, c-format
 msgid "There was an error reading the file '%s'."
-msgstr "Une erreur s'est produite lors de la lecture du fichier '%s'."
+msgstr "Une erreur s'est produite lors de la lecture du fichier « %s »."
 
 #: backend/file/qsf-backend.c:610
 #, c-format
 msgid ""
 "The selected file '%s' is a QSF map and cannot be opened as a QSF object."
 msgstr ""
-"Le fichier sélectionné '%s' est un schéma QSF et ne peut donc pas être "
-"ouvert en tant qu\"objet QSF."
+"Le fichier sélectionné « %s » est un schéma QSF et ne peut donc pas être "
+"ouvert en tant qu'objet QSF."
 
 #: backend/file/qsf-backend.c:1120
 #, c-format
@@ -183,7 +183,7 @@ msgid ""
 "Could not write to '%s'. Check that you have permission to write to this "
 "file and that there is sufficient space to create it."
 msgstr ""
-"N'a pas pu écrire dans '%s'. Veuillez vérifier que vous avez les droits "
+"N'a pas pu écrire dans « %s ». Veuillez vérifier que vous avez les droits "
 "d'écriture dans ce fichier et qu'il y a suffisamment d'espace pour le créer."
 
 #: backend/file/qsf-backend.c:1356
@@ -192,7 +192,7 @@ msgid ""
 "The selected QSF object file '%s' contains one or more invalid GUIDs. The "
 "file cannot be processed - please check the source of the file and try again."
 msgstr ""
-"L'objet QSF sélectionné '%s' comporte un ou plusieurs GUID invalides. Le "
+"L'objet QSF sélectionné « %s » comporte un ou plusieurs GUID invalides. Le "
 "fichier ne peut être traité - veuillez s'il vous plait vérifier la source et "
 "réessayer."
 
@@ -203,8 +203,8 @@ msgid ""
 "values. The file cannot be processed - please check the source of the file "
 "and try again."
 msgstr ""
-"L'objet QSF sélectionné '%s' comporte une ou plusieurs valeurs 'collecte' "
-"invalides. le fichier ne peut être traité - veuillez s'il vous plait "
+"L'objet QSF sélectionné « %s » comporte une ou plusieurs valeurs « collecte » "
+"invalides. Le fichier ne peut être traité - veuillez s'il vous plait "
 "vérifier la source et réessayer."
 
 #: backend/sqlite/qof-sqlite.c:836
@@ -213,13 +213,13 @@ msgid ""
 "Unable to open the output file '%s' - do you have permission to create this "
 "file?"
 msgstr ""
-"Impossible d'ouvrir le fichier destination '%s' - avez vous les droits "
+"Impossible d'ouvrir le fichier destination « %s » - avez vous les droits "
 "nécessaires pour le créer?"
 
 #: backend/sqlite/qof-sqlite.c:868
 #, c-format
 msgid "Unable to open the sqlite database '%s'."
-msgstr "Impossible d'ouvrir la base de données sqlite '%s'."
+msgstr "Impossible d'ouvrir la base de données sqlite « %s »."
 
 #: backend/sqlite/qof-sqlite.c:892
 msgid "Please provide a filename for sqlite."
@@ -251,7 +251,7 @@ msgid ""
 "Unable to locate a suitable backend for '%s' - please check you have "
 "specified an access method like file: or sqlite:"
 msgstr ""
-"Impossible d'atteindre une interface valide pour '%s' - veuillez s'il vous "
+"Impossible d'atteindre une interface valide pour « %s » - veuillez s'il vous "
 "plait vérifier que vous avez spécifié une méthode d'accès telle que file: ou "
 "sqlite:"
 
@@ -267,5 +267,6 @@ msgid ""
 "hold a number."
 msgstr ""
 "Lors de la conversion des chaînes SQLite en chiffres, un dépassent a été "
-"détecté. La base SQLite '%s' comporte des données invalides dans un champ "
-"censé contenir un chiffre."
+"détecté. La base SQLite « %s » comporte des données invalides dans un champ censé "
+"contenir un chiffre."
+
