--- a/qof/po/fr.po
+++ b/qof/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.8.0\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.alioth.debian.org\n"
-"POT-Creation-Date: 2009-05-08 10:10+0100\n"
+"POT-Creation-Date: 2009-05-07 22:44+0100\n"
 "PO-Revision-Date: 2009-05-15 21:16+0200\n"
 "Last-Translator: Julien Patriaca <patriarcaj@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -39,9 +39,9 @@ msgid ""
 "against the QSF object schema. The XML structure of the file is either not "
 "well-formed or the file contains illegal data."
 msgstr ""
-"L'objet QSF est invalide ! La validation du fichier « %s » a échoué au regard du "
-"schéma des objets QSF. La structure XMl du fichier est soit mal formée soit "
-"contient des données incompatibles."
+"L'objet QSF est invalide ! La validation du fichier « %s » a échoué au regard "
+"du schéma des objets QSF. La structure XMl du fichier est soit mal formée "
+"soit contient des données incompatibles."
 
 #: backend/file/qsf-xml-map.c:274
 #, c-format
@@ -146,8 +146,8 @@ msgid ""
 "a number."
 msgstr ""
 "Lors de la conversion des chaînes XML en chiffres, un dépassement a été "
-"détecté. L'objet QSF « %s » comporte des données invalides dans un champ censé "
-"contenir un chiffre."
+"détecté. L'objet QSF « %s » comporte des données invalides dans un champ "
+"censé contenir un chiffre."
 
 #: backend/file/qsf-backend.c:333
 #, c-format
@@ -267,6 +267,5 @@ msgid ""
 "hold a number."
 msgstr ""
 "Lors de la conversion des chaînes SQLite en chiffres, un dépassent a été "
-"détecté. La base SQLite « %s » comporte des données invalides dans un champ censé "
-"contenir un chiffre."
-
+"détecté. La base SQLite « %s » comporte des données invalides dans un champ "
+"censé contenir un chiffre."
