--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -30,8 +30,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Downgrade Recommends: libqof-doc to a Suggests for those who still
     use Recommends-Important. Remove some unnecessary build-dependencies.
   * [L10n] Add French program translation   (Closes: #528756)
+  * [l10n] Add Czech translation of qof (Closes: #528979)
 
- -- Neil Williams <codehelp@debian.org>  Fri, 15 May 2009 16:16:45 +0100
+ -- Neil Williams <codehelp@debian.org>  Sun, 17 May 2009 11:36:42 +0100
 
 qof (0.7.5-1) unstable; urgency=low
 
