--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,11 @@
+2009-05-17  Tomas Fidler <tomas.fidler@tiscali.cz>
+
+	po/cs.po: New Czech translation.
+
+2009-05-17  Yuri Kozlov <yuray@komyakino.ru>
+
+	po/ru.po: New Russian translation.
+
 2009-05-15  Julien Patriarca <patriarcaj@gmail.com>
 
 	* po/fr.po: New French translation.
